// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checked> should be \`Checked\` when checked: Checked 1`] = `
<DocumentFragment>
  <input
    checked=""
    name="test"
    style="border: 0px; height: 1px; width: 1px; margin: -1px; padding: 0px; overflow: hidden; position: absolute;"
    type="radio"
    value="a"
  />
  Checked
</DocumentFragment>
`;

exports[`<Checked> should be null when unchecked: [blank] 1`] = `
<DocumentFragment>
  <input
    name="test"
    style="border: 0px; height: 1px; width: 1px; margin: -1px; padding: 0px; overflow: hidden; position: absolute;"
    type="radio"
    value="a"
  />
</DocumentFragment>
`;

exports[`<Mark> should apply checked and unchecked styles: a=checked, b=unchecked 1`] = `
<DocumentFragment>
  <input
    checked=""
    data-testid="a"
    name="test"
    style="border: 0px; height: 1px; width: 1px; margin: -1px; padding: 0px; overflow: hidden; position: absolute;"
    type="radio"
    value="a"
  />
  <span
    class="radio--checked"
    style="display: block;"
  >
    Checkmark A
  </span>
  <input
    data-testid="b"
    name="test"
    style="border: 0px; height: 1px; width: 1px; margin: -1px; padding: 0px; overflow: hidden; position: absolute;"
    type="radio"
    value="b"
  />
  <span
    style="display: none;"
  >
    Checkmark B
  </span>
</DocumentFragment>
`;

exports[`<Mark> should apply checked and unchecked styles: a=unchecked, b=checked 1`] = `
<DocumentFragment>
  <input
    checked=""
    data-testid="a"
    name="test"
    style="border: 0px; height: 1px; width: 1px; margin: -1px; padding: 0px; overflow: hidden; position: absolute;"
    type="radio"
    value="a"
  />
  <span
    style="display: none;"
  >
    Checkmark A
  </span>
  <input
    data-testid="b"
    name="test"
    style="border: 0px; height: 1px; width: 1px; margin: -1px; padding: 0px; overflow: hidden; position: absolute;"
    type="radio"
    value="b"
  />
  <span
    class="radio--checked"
    style="display: block;"
  >
    Checkmark B
  </span>
</DocumentFragment>
`;

exports[`<Mark> should have \`checked\` class name when checked: a=checked 1`] = `
<DocumentFragment>
  <input
    checked=""
    data-testid="a"
    name="test"
    style="border: 0px; height: 1px; width: 1px; margin: -1px; padding: 0px; overflow: hidden; position: absolute;"
    type="radio"
    value="a"
  />
  <span
    class="checked"
  >
    Checkmark A
  </span>
  <input
    data-testid="b"
    name="test"
    style="border: 0px; height: 1px; width: 1px; margin: -1px; padding: 0px; overflow: hidden; position: absolute;"
    type="radio"
    value="b"
  />
  <span>
    Checkmark B
  </span>
</DocumentFragment>
`;

exports[`<Mark> should have \`checked\` class name when checked: a=unchecked, b=checked 1`] = `
<DocumentFragment>
  <input
    checked=""
    data-testid="a"
    name="test"
    style="border: 0px; height: 1px; width: 1px; margin: -1px; padding: 0px; overflow: hidden; position: absolute;"
    type="radio"
    value="a"
  />
  <span>
    Checkmark A
  </span>
  <input
    data-testid="b"
    name="test"
    style="border: 0px; height: 1px; width: 1px; margin: -1px; padding: 0px; overflow: hidden; position: absolute;"
    type="radio"
    value="b"
  />
  <span
    class="checked"
  >
    Checkmark B
  </span>
</DocumentFragment>
`;

exports[`<Mark> should have \`unchecked\` class name when unchecked: a=checked, b=unchecked 1`] = `
<DocumentFragment>
  <input
    checked=""
    data-testid="a"
    name="test"
    style="border: 0px; height: 1px; width: 1px; margin: -1px; padding: 0px; overflow: hidden; position: absolute;"
    type="radio"
    value="a"
  />
  <span
    class="radio--checked"
  >
    Checkmark A
  </span>
  <input
    data-testid="b"
    name="test"
    style="border: 0px; height: 1px; width: 1px; margin: -1px; padding: 0px; overflow: hidden; position: absolute;"
    type="radio"
    value="b"
  />
  <span
    class="unchecked"
  >
    Checkmark B
  </span>
</DocumentFragment>
`;

exports[`<Mark> should have \`unchecked\` class name when unchecked: a=unchecked, b=checked 1`] = `
<DocumentFragment>
  <input
    checked=""
    data-testid="a"
    name="test"
    style="border: 0px; height: 1px; width: 1px; margin: -1px; padding: 0px; overflow: hidden; position: absolute;"
    type="radio"
    value="a"
  />
  <span
    class="unchecked"
  >
    Checkmark A
  </span>
  <input
    data-testid="b"
    name="test"
    style="border: 0px; height: 1px; width: 1px; margin: -1px; padding: 0px; overflow: hidden; position: absolute;"
    type="radio"
    value="b"
  />
  <span
    class="radio--checked"
  >
    Checkmark B
  </span>
</DocumentFragment>
`;

exports[`<Radio> should provide context to function child 1`] = `
Object {
  "check": [Function],
  "checked": false,
  "disabled": false,
  "focused": false,
  "uncheck": [Function],
}
`;

exports[`<Radio> should render as a radio button: type=radio, value=foo, no name 1`] = `
<DocumentFragment>
  <input
    style="border: 0px; height: 1px; width: 1px; margin: -1px; padding: 0px; overflow: hidden; position: absolute;"
    type="radio"
    value="foo"
  />
</DocumentFragment>
`;

exports[`<RadioGroup> should render radio input names: name=me value=a, name=me value=b 1`] = `
<DocumentFragment>
  <input
    name="me"
    style="border: 0px; height: 1px; width: 1px; margin: -1px; padding: 0px; overflow: hidden; position: absolute;"
    type="radio"
    value="a"
  />
  <input
    name="me"
    style="border: 0px; height: 1px; width: 1px; margin: -1px; padding: 0px; overflow: hidden; position: absolute;"
    type="radio"
    value="b"
  />
</DocumentFragment>
`;

exports[`<Unchecked> should be \`Unchecked\` when unchecked: Unchecked 1`] = `
<DocumentFragment>
  <input
    name="test"
    style="border: 0px; height: 1px; width: 1px; margin: -1px; padding: 0px; overflow: hidden; position: absolute;"
    type="radio"
    value="a"
  />
  Unchecked
</DocumentFragment>
`;

exports[`<Unchecked> should be null when checked: [blank] 1`] = `
<DocumentFragment>
  <input
    checked=""
    name="test"
    style="border: 0px; height: 1px; width: 1px; margin: -1px; padding: 0px; overflow: hidden; position: absolute;"
    type="radio"
    value="a"
  />
</DocumentFragment>
`;

exports[`useFocused() should be \`true\` when focused, \`false\` when blurred: false 1`] = `
<DocumentFragment>
  <input
    data-testid="a"
    style="border: 0px; height: 1px; width: 1px; margin: -1px; padding: 0px; overflow: hidden; position: absolute;"
    type="radio"
    value="a"
  />
  false
</DocumentFragment>
`;

exports[`useFocused() should be \`true\` when focused, \`false\` when blurred: false 2`] = `
<DocumentFragment>
  <input
    data-testid="a"
    style="border: 0px; height: 1px; width: 1px; margin: -1px; padding: 0px; overflow: hidden; position: absolute;"
    type="radio"
    value="a"
  />
  false
</DocumentFragment>
`;

exports[`useFocused() should be \`true\` when focused, \`false\` when blurred: true 1`] = `
<DocumentFragment>
  <input
    data-testid="a"
    style="border: 0px; height: 1px; width: 1px; margin: -1px; padding: 0px; overflow: hidden; position: absolute;"
    type="radio"
    value="a"
  />
  true
</DocumentFragment>
`;
